import net.darkhax.curseforgegradle.TaskPublishCurseForge

plugins {
    id 'java-library'
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.neoforged.gradle.userdev' version '7.0.165'
    id 'net.darkhax.curseforgegradle' version '[1.1.24,)'
    id "at.stnwtr.gradle-secrets-plugin" version "1.0.1"
    id "com.modrinth.minotaur" version "2.+"
}

version = mod_version
group = 'dev.kxmc'

repositories {
    mavenLocal()
}

base {
    archivesName = mod_id
}

java {
    withSourcesJar()
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

minecraft.accessTransformers.file rootProject.file('src/main/resources/META-INF/accesstransformer.cfg')

sourceSets{
    client{}
    server{}
    data{}
    common{}
}

runs {
    configureEach {
        systemProperty 'forge.logging.markers', 'REGISTRIES'
        systemProperty 'forge.logging.console.level', 'info'
        modSource project.sourceSets.main
    }
    client {
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        modSource project.sourceSets.client
        modSource project.sourceSets.common
    }
    server {
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        modSource project.sourceSets.server
        modSource project.sourceSets.common
    }
    gameTestServer {
        systemProperty 'forge.enabledGameTestNamespaces', project.mod_id
        modSource project.sourceSets.server
        modSource project.sourceSets.common
    }
    data {
        arguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        modSource project.sourceSets.data
    }
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

dependencies {
    implementation "net.neoforged:neoforge:${neo_version}"
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version      : minecraft_version, minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version, neo_version_range: neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors            : mod_authors, mod_description: mod_description,
            l2library_version_range: l2library_version_range,
            curios_version_range   : curios_version_range,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties + [project: project]
    }
}

// Example configuration to allow publishing using the maven-publish plugin
publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}

jar {
    manifest {
        attributes([
                "Automatic-Module-Name"   : "${mod_id}",
                "Specification-Title"     : "${mod_id}",
                "Specification-Vendor"    : "xkmc",
                "Specification-Version"   : "1", // We are version 1 of ourselves
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : "xkmc",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                'MixinConfigs'            : "${mod_id}.mixins.json"
        ])
    }
}

repositories {
    flatDir {
        dirs 'libs'
    }
    maven { // Registrate
        url "https://maven.ithundxr.dev/snapshots"
    }
    maven {
        url = "https://maven.theillusivec4.top/"
    }
    maven {
        // Location of the maven for vazkii's mods
        name 'blamejared'
        url 'https://maven.blamejared.com'
    }
    maven {
        url 'https://www.cursemaven.com'
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
        content {
            includeGroup "maven.modrinth"
        }
    }
    maven {
        name = "OctoStudios"
        url = uri("https://maven.octo-studios.com/releases")
    }
    mavenLocal();
}

if (lljij.toBoolean()) {

    tasks.jarJar.configure {
        archiveClassifier.set('')
    }

    jar {
        archiveClassifier.set('slim')
    }

}

dependencies {

    implementation "com.tterrag.registrate:Registrate:${registrate_version}"

    implementation "dev.xkmc:l2serial:${l2serial_ver}"
    implementation "dev.xkmc:l2modularblocks:${l2modularblocks_ver}"
    implementation "dev.xkmc:l2core:${l2core_ver}"
    implementation "dev.xkmc:l2tabs:${l2tabs_ver}"
    implementation "dev.xkmc:l2menustacker:${l2menustacker_ver}"
    implementation "dev.xkmc:l2itemselector:${l2itemselector_ver}"
    implementation "dev.xkmc:l2library:${l2library_ver}"
    implementation "dev.xkmc:l2damagetracker:${l2damagetracker_ver}"
    implementation "dev.xkmc:modulargolems:${modulargolems_ver}"
    implementation "dev.xkmc:l2complements:${l2complements_ver}"
    implementation "dev.xkmc:l2weaponry:${l2weaponry_ver}"
    implementation "dev.xkmc:l2archery:${l2archery_ver}"

    implementation "mezz.jei:jei-${jei_minecraft_version}:${jei_version}"
    implementation "top.theillusivec4.curios:curios-neoforge:${curios_version}"
    implementation "vazkii.patchouli:Patchouli:${patchouli_ver}"

    implementation "mezz.jei:jei-${jei_minecraft_version}:${jei_version}"
    implementation "vazkii.patchouli:Patchouli:${patchouli_ver}"

    //implementation "curse.maven:adorned-1036809:5740650"

    compileOnly "top.theillusivec4.curios:curios-neoforge:${curios_version}"
    //runtimeOnly "top.theillusivec4.curios:curios-neoforge:${curios_version}"
    dataRuntimeOnly "top.theillusivec4.curios:curios-neoforge:${curios_version}"
    commonRuntimeOnly "curse.maven:cloth-config-348521:5623420"
    commonRuntimeOnly "maven.modrinth:accessories:1.0.0-beta.35+1.21"
    commonRuntimeOnly "maven.modrinth:accessories-cc-layer:9.0.5-beta.11+1.21"

    //implementation "curse.maven:embeddium-908741:5681729"
    implementation "maven.modrinth:sodium:mc1.21-0.6.0-beta.2-neoforge"
    //implementation "curse.maven:irisshaders-455508:5765375"
}

tasks.register('publishCurseForge', TaskPublishCurseForge) {
    apiToken = secrets.get("curseforge_token")
    def mainFile = upload(project.curseforge_project, new File("./build/libs/${mod_id}-${mod_version}.jar"))
    mainFile.changelog = new File('./changelog.txt')
    mainFile.addEnvironment("Client", "Server")
    mainFile.addGameVersion("1.21.1")
    mainFile.addModLoader("NeoForge")
    mainFile.addRequirement("l2library", "curios")
    mainFile.addOptional(
            "l2-complements",
            "modulargolems",
            "patchouli")
    mainFile.releaseType = "beta"
    disableVersionDetection()
}

modrinth {
    token = secrets.get("modrinth_token")
    projectId = project.modrinth_project
    versionName = "L2 Artifacts ${project.mod_version}"
    versionNumber = project.mod_version
    versionType = "beta"
    uploadFile = new File("./build/libs/${mod_id}-${mod_version}.jar")
    gameVersions = ["1.21.1"]
    loaders = ["neoforge"]
    changelog = new File('./changelog.txt').text.split("\n\n")[0]
    dependencies {
        required.project "l2library"
        required.project "curios"
        optional.project "l2-complements"
        optional.project "modular-golems"
        optional.project "patchouli"
    }
}